@@ -38,8 +38,8 @@ class Pair
 		Pair operator /= (T c)                 {_x /= c;   _y /= c;   return *this;}
       Pair ortho () const                    {return Pair(-_y, _x);}
       double length () const                 {return std::sqrt(_x*_x + _y*_y);}
-		bool operator == (const Pair &p) const {return _x == p._x && y == p._y;}
-		bool operator != (const Pair &p) const {return _x != p._x || y != p._y;}
+		bool operator == (const Pair &p) const {return _x == p._x && _y == p._y;}
+		bool operator != (const Pair &p) const {return _x != p._x || _y != p._y;}
 		T x () const                           {return _x;}
 		T y () const                           {return _y;}
 		void x (const T &xx)                   {_x = xx;}
